--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "base_font": "nunito-sans",
     "palette": "blue",
     "header": {
-        "logo_img": "/images/AllStars-horizontaal-01.svg",
+        "logo_img": "/images/AllStars-horizontaal-01.png",
         "logo_img_alt": "Logo",
         "has_nav": true,
         "nav_links": [
