--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,7 +39,7 @@
         "sections": [
             {
                 "type": "footer_text",
-                "image": "images/logo-alt.svg",
+                "image": "/images/AllStars-wit-01.png",
                 "image_url": "/",
                 "image_alt": "Footer logo",
                 "content": "Stackbit theme demo"
