--- a/content/data/config.json
+++ b/content/data/config.json
@@ -131,7 +131,7 @@
                 "style": "link"
             }
         ],
-        "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=azimuth&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>."
+        "content": "Copyright All Stars Begeleiding"
     },
     "domain": "https://thoughtful-zucchini-aa027.netlify.app"
 }
