--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Azimuth",
     "path_prefix": "/",
     "base_font": "nunito-sans",
-    "palette": "purple",
+    "palette": "blue",
     "header": {
         "logo_img": "/images/AllStars-horizontaal-01.png",
         "logo_img_alt": "Logo",
