config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,7 @@
                 "style": "link"
             },
             {
-                "label": "Pricing",
+                "label": "Tarieven",
                 "url": "/pricing",
                 "style": "link"
             },
