config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -24,7 +24,7 @@
                 "style": "link"
             },
             {
-                "label": "Sign Up",
+                "label": "Neem contact op",
                 "url": "/signup",
                 "style": "primary"
             }
