--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Azimuth",
+    "title": "All Stars Begeleiding",
     "path_prefix": "/",
     "base_font": "nunito-sans",
     "palette": "blue",
