config.json: updated title in sections

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
             },
             {
                 "type": "footer_nav",
-                "title": "Company",
+                "title": "Organisatie",
                 "nav_links": [
                     {
                         "label": "About Us",
