--- a/content/data/config.json
+++ b/content/data/config.json
@@ -66,7 +66,7 @@
             },
             {
                 "type": "footer_nav",
-                "title": "Community",
+                "title": "Social media",
                 "nav_links": [
                     {
                         "label": "Twitter",
