--- a/content/data/config.json
+++ b/content/data/config.json
@@ -125,7 +125,7 @@
                 "style": "link"
             }
         ],
-        "content": "Copyright All Stars Begeleiding"
+        "content": "Copyright © All Stars Begeleiding"
     },
     "domain": "https://thoughtful-zucchini-aa027.netlify.app"
 }
