config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -102,7 +102,7 @@
         "has_nav": true,
         "nav_links": [
             {
-                "label": "Terms of Service",
+                "label": "Algemene voorwaarden",
                 "url": "/terms-of-service",
                 "style": "link"
             },
